--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn {
+  @apply px-2 py-1;
+  @apply text-xs;
+  @apply bg-blue-300 hover:bg-blue-500;
+}
